--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,23 @@
 <header class="header">
-  <div class="container">
-    <div class="header-logo"><a href="/" title="Francois Coron | Designer web / développeur front-end">Francois Coron</a></div><a id="menu-icon" href="#" class="header-m-icon"><span class="bar"></span></a>
-    <div id="header-m" class="header-m">
-      <nav class="header-menu"><a href="/" title="Projets">Projets</a><a href="/about" title="A propos">A propos</a><a href="mailto:hello@francoiscoron.com" title="Contact">Contact</a>
-      </nav>
-      <div class="header-social-links"><a href="https://twitter.com/FrancoisCoron" title="Twitter" target="_blank" class="tooltip"><i class="fa fa-twitter"></i></a><a href="https://behance.net/francoiscoron" title="Behance" target="_blank" class="tooltip"><i class="fa fa-behance"></i></a><a href="http://goo.gl/QAE0x2" title="Linkedin" target="_blank" class="tooltip"><i class="fa fa-linkedin-square"></i></a><a href="https://github.com/francoiscoron" title="Github" target="_blank" class="tooltip"><i class="fa fa-github-alt"></i></a></div>
+    <div class="container">
+        <div class="header-logo">
+            <a href="/" title="Francois Coron | Designer web / développeur front-end">Francois Coron</a>
+        </div>
+        <a id="menu-icon" href="#" class="header-m-icon"><span class="bar"></span></a>
+        <div id="header-m" class="header-m">
+            <nav class="header-menu">
+                <a href="http://chimps-design.com" title="Projets">Projets</a>
+                <a href="http://chimps-design.com/about" title="A propos">A propos</a>
+                <a href="http://0.0.0.0:4000/" title="Blog">Blog</a>
+                <a href="mailto:hello@francoiscoron.com" title="Contact">Contact</a>
+            </nav>
+
+        <div class="header-social-links">
+            <a href="https://twitter.com/FrancoisCoron" title="Twitter" target="_blank" class="tooltip"><i class="fa fa-twitter"></i></a>
+            <a href="https://behance.net/francoiscoron" title="Behance" target="_blank" class="tooltip"><i class="fa fa-behance"></i></a>
+            <a href="http://goo.gl/QAE0x2" title="Linkedin" target="_blank" class="tooltip"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/francoiscoron" title="Github" target="_blank" class="tooltip"><i class="fa fa-github-alt"></i></a>
+        </div>
+      </div>
     </div>
-  </div>
 </header>
-<div class="animsition">
