--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -6,9 +6,6 @@ $font-family: 'Source Sans Pro', sans-serif;
 $font-serif: 'Merriweather', serif;
 $code-font: 'Source Code Pro';
 $light-color: #555;
-.wrapper {
-    padding: 0;
-}
 // List posts
 .clearfix{
     &:after {
@@ -17,30 +14,51 @@ $light-color: #555;
         clear: both;
     }
 }
-
-.posts-container--box {
-    width: 33.33%;
+.page-heading {
+    margin-bottom: 4rem;
+    padding: 2rem 0;
+    text-align: center;
+    h1 { margin-bottom: 0;}
+    h2 { color: $light-color; font-weight: lighter; font-size: 1.5rem; }
+}
+// POost
+.post-box {
+    margin: 3rem 0;
+}
+.post-cover {
     float: left;
-    padding-right: 30px;
-    height: 300px;
-    &:last-child {
-        padding-right: 0;
-    }
-    h2 {
-        font-size: 18px;
-        text-transform: uppercase;
-        color: #333;
-        line-height: 1;
-        margin-bottom: 0;
-        a {
-            color: #333;
-        }
-    }
-    p{
-        font-size: 14px;
+    margin-right: 1.3rem;
+    max-height: 150px; max-width: 150px;
+    img { border-radius: 100%; }
+    @media (max-width: 830px) {
+        display: none;
     }
 }
-
+.post-summary {
+    width: 78%;
+    float: right;
+    h3 {
+        font-size: 1.6rem;
+        margin-bottom: .5rem;
+        font-weight: bold;
+        a {
+            color: #333;
+            &:hover {
+                text-decoration: none;
+                color: darken(#333, 10%);
+            }
+        }
+    }
+    p {
+        line-height: 1.5;
+        color: $light-color;
+        font-family: $font-serif;
+    }
+    @media (max-width: 830px) {
+        float: none;
+        width: 100%;
+    }
+}
 // Code formatting
 p > code {
     background-color: #F2F2F2;
